log
Mon, May  5, 2025  3:43:54 AM: 
 tests:  1|8
total_score: 0/70
5729e4d
Mon, May  5, 2025  3:57:10 AM: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
43330e3
Mon, May  5, 2025  4:09:30 AM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
00972a7
Mon, May  5, 2025  4:18:06 AM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:84:13: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if (lower_than(key, tree->current->pair->key))
             ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
b91aa39
Mon, May  5, 2025  4:19:01 AM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e1da651
Mon, May  5, 2025  4:24:56 AM: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:88:9: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
         else
         ^~~~
treemap.c:90:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
             return temp->pair;
             ^~~~~~
cc1.exe: all warnings being treated as errors
680a2d1
Mon, May  5, 2025  4:25:34 AM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
45c3891
Mon, May  5, 2025  4:29:04 AM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
5d2144e
Mon, May  5, 2025  4:56:09 AM: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  0|0
4fec699
Mon, May  5, 2025  5:00:07 AM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
74de493
Mon, May  5, 2025  5:07:19 AM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
7103264
Mon, May  5, 2025  5:09:39 AM: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  15|4
total_score: 25/70
0e74da3
Mon, May  5, 2025  5:23:50 AM: 
 treemap.c | 48 ++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 48 insertions(+)
 tests:  18|3
total_score: 40/70
85c6076
Mon, May  5, 2025  5:43:03 AM: 
 treemap.c | 75 +++++++++++++++++++++++++++++++++++++--------------------------
 1 file changed, 44 insertions(+), 31 deletions(-)
 tests:  18|3
total_score: 40/70
03e8978
Mon, May  5, 2025  6:15:53 AM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
260df93
Mon, May  5, 2025  6:23:40 AM: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:234:20: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return temp->parent;  // Este será NULL si el nodo es el máximo en el árbol
                ~~~~^~~~~~~~
cc1.exe: all warnings being treated as errors
720c33b
Mon, May  5, 2025  6:28:32 AM: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  23|2
total_score: 50/70
9a4b09f
Mon, May  5, 2025  6:31:56 AM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
e6ef8de
